# front-end-msc

./: Procfile  README.md  app.py  pyproject.toml  requirements.txt
notebooks/.ipynb_checkpoints/: Covid Vaccine-checkpoint.ipynb
