[tool.poetry]
name = "front-end-msc"
version = "0.1.0"
description = "final project"
authors = ["Oswaldo Gomez <osw.gom89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.82.0"
jupyter = "^1.0.0"
altair = "^4.1.0"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
watchdog = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
